added Figure for Chinook Time Series of indicator stocks and updated text

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -501,6 +501,7 @@
 {Columbia}, 2004},
 	language = {en},
 	author = {Parken, C.K. and McNicol,R. E. and Irvine, J.R.},
+	number = {Can. Sci. Advis. Sec. Res. Doc. 2006/083},
 	year = {2006},
 	pages = {67},
 }
@@ -518,4 +519,13 @@ url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2400.2009.00719.x}
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2400.2009.00719.x},
 abstract = {Abstract  Escapement goals for Chinook salmon, Oncorhynchus tshawytscha (Walbaum), populations tend to be highly uncertain due to variability in, and in some cases complete absence of, spawner-recruit data. A previous study of 25 populations from Oregon to Alaska demonstrated that watershed size is a good predictor of unfished equilibrium population size. Here this relationship is further developed by evaluating a series of Bayesian hierarchical models of increasing complexity. The model that performed best included a temporal random walk to account for patterns in the spawner-recruit residuals and life history-specific distributions for the productivity parameter.},
 year = {2010}
+}
+
+@techreport{dfo_wcviSAR_2012,
+	title = {Assessment of west coast {Vancouver} {Island} {Chinook} and 2010 Forecast},
+	language = {en},
+	number = {Can. Sci. Advis. Sec. Sci. Avis. Rep. 2011/032},
+	author = {DFO},
+	year = {2012},
+	pages = {17},
 }
